# pooter

./: .gitignore  LICENSE.txt  README.md  demo_server.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: module-test.yml
src/_stub/: broker.pyi  consumer.pyi  emitter.pyi
src/archi/: __init__.py  broker.py  consumer.py  emitter.py  event.py  events.py
tests/: integration_test.py  test_broker.py  test_consumer.py  test_emitter.py  test_event.py
tests/archi/: test_broker.py  test_emitter.py
